--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -16,8 +16,12 @@ env:
  # verbosity setting for Terraform logs
  TF_LOG: INFO
  # Credentials for deployment to AWS
- AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
- AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+permissions:
+  id-token: write
+  contents: read # This is required for actions/checkout@v2
 
 jobs:
  terraform:
@@ -30,6 +34,11 @@ jobs:
        working-directory: ./terraform
 
    steps:
+     - name: Configure AWS credentials
+       uses: aws-actions/configure-aws-credentials@v1
+       with:
+         role-to-assume: arn:aws-cn:iam::635304352795:role/github_actions_role
+         aws-region: cn-north-1
      - name: Checkout the repository to the runner
        uses: actions/checkout@v3
 
