--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -19,9 +19,7 @@ env:
  # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
  # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
 
 jobs:
  terraform:
