--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,6 +1,8 @@
 name: "Terraform Infrastructure Change Management Pipeline with GitHub Actions"
 
 on:
+ workflow_dispatch:
+
  push:
    branches:
    - main
